Fix progress bar on small screens. #129

--- a/app/scss/patterns/_loading.scss
+++ b/app/scss/patterns/_loading.scss
@@ -21,16 +21,19 @@
 
 #loading-bar .bar {
   transition: width 350ms;
-
   background: $primary-color;
   position: fixed;
   z-index: $z-loading-bar;
-  top: 3.5em;
+  top: 0;
   left: 0;
   width: 100%;
   height: 2px;
   border-bottom-right-radius: 1px;
   border-top-right-radius: 1px;
+
+  @include bp(break-top-nav) {
+    top: 3.5em;
+  }
 }
 
 // Fancy blur effect
@@ -46,11 +49,15 @@
 }
 
 #loading-bar-spinner {
-  display: block;
+  display: none;
   position: fixed;
   z-index: $z-loading-bar;
   top: 4.5em;
   left: 1em;
+
+  @include bp(break-top-nav) {
+    display: block;
+  }
 }
 
 #loading-bar-spinner .spinner-icon {
